extracted the generic schema stuff to an own controller which inherits the scope from its parent

--- a/client/app/views/schema.html
+++ b/client/app/views/schema.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div ng-controller="SchemaCtrl" class="panel panel-default">
     <div class="panel-heading"><H4>{{ schema.name }}</H4></div>
     <div class="panel-body">
         <div class="panel-body">
