created a timepicker directive

--- a/client/app/views/schemaslot.html
+++ b/client/app/views/schemaslot.html
@@ -5,22 +5,7 @@
             <form class="form" role="form" ng-submit="addSlot(slot)">
                 <div class="form-group">
                     <div class="col-sm-4">
-                        <label for="fromDate">Välj datum</label>
-
-                        <div class="input-group">
-                            <input id="fromDate" type="text" class="form-control" datepicker-popup="{{format}}"
-                                    ng-model="slot.date"
-                                    is-open="datePickerOpened" min-date="minDate" max-date="maxDate"
-                                    datepicker-options="dateOptions" date-disabled="disableWeekends(date, mode)"
-                                    ng-required="true"
-                                    close-text="Close" show-button-bar="false"/>
-
-                            <div class="input-group-btn">
-                                <button type="button" class="btn btn-default datepicker"
-                                        ng-click="openDatePicker($event)"><span
-                                        class="glyphicon glyphicon-calendar"></span></button>
-                            </div>
-                        </div>
+                        <time-picker-directive></time-picker-directive>
                     </div>
                 </div>
                 <div class="form-group">
