--- a/client/app/views/schemaslot.html
+++ b/client/app/views/schemaslot.html
@@ -5,7 +5,7 @@
             <form class="form" role="form" ng-submit="addSlot(slot)">
                 <div class="form-group">
                     <div class="col-sm-4">
-                        <time-picker-directive></time-picker-directive>
+                        <date-picker-directive selected-date="slot.date"></date-picker-directive>
                     </div>
                 </div>
                 <div class="form-group">
