directive to make an editible cell

--- a/client/app/views/editabletextcell.html
+++ b/client/app/views/editabletextcell.html
@@ -1,7 +1,7 @@
 <div ng-click="editMode()">
 <span ng-if="!edit">{{model.value}}</span>
 <div ng-if="edit" class="input-group">
-    <input type="text" class="form-control" ng-model="model.value">
+    <input type="text" class="form-control" ng-model="model.value" focus="true">
 
     <div class="input-group-btn">
         <button type="button" class="btn btn-default" ng-click="save($event)">
