--- a/client/app/views/teacherschemas.html
+++ b/client/app/views/teacherschemas.html
@@ -1,3 +1,5 @@
+<breadcrumb></breadcrumb>
+
 <div class="panel panel-default">
 
     <div class="panel-heading"><H4>Scheman</H4></div>
@@ -12,7 +14,7 @@
                 <tbody>
                 <tr ng-repeat="schema in schemas">
                     <td editible-text-cell class="col-sm-4" edit="schema.editing" text="schema.name" save="edit(schema, 'name', value)"></td>
-                    <td class="col-sm-2">
+                    <td class="col-sm-1">
                         <button ng-if="!schema.editing" type="button" class="btn btn-default btn-sm btn-danger"
                                 ng-click="delete(schema)">
                             <span class="glyphicon glyphicon-trash"></span>
