added a dropdown button with an email indicator to visualize that an email lands in the parent inboxes with a link to the student page.

--- a/client/app/views/teacherclasses.html
+++ b/client/app/views/teacherclasses.html
@@ -16,7 +16,7 @@
                     <td class="col-sm-1">
                         <button ng-if="!class.editing" type="button" class="btn btn-default btn-sm"
                                 ng-click="show(class.name)">
-                            <span class="glyphicon glyphicon-pencil"> Konfigurera</span>
+                            <span class="glyphicon glyphicon-pencil"></span>
                         </button>
                         <button ng-if="!class.editing" type="button" class="btn btn-default btn-sm btn-danger"
                                 ng-click="delete(class)">
