--- a/client/app/views/teacherschemas.html
+++ b/client/app/views/teacherschemas.html
@@ -1,61 +1,59 @@
-
 <div class="panel panel-default">
-
     <div class="panel-heading"><H4>Scheman</H4></div>
     <div class="panel-body">
-        <div class="panel-body">
-            <table class="table table-condensed">
-                <thead>
-                <tr>
-                    <th colspan="2">Namn</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="schema in schemas">
-                    <td editible-text-cell class="col-sm-4" edit="schema.editing" text="schema.name" save="edit(schema, 'name', value)"></td>
-                    <td class="col-sm-1">
-                        <button ng-if="!schema.editing" type="button" class="btn btn-default btn-sm"
-                                ng-click="show(schema)">
-                            <span class="glyphicon glyphicon-pencil"></span>
+        <table class="table table-condensed">
+            <thead>
+            <tr>
+                <th colspan="2">Namn</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="schema in schemas">
+                <td editible-text-cell class="col-sm-4" edit="schema.editing" text="schema.name"
+                        save="edit(schema, 'name', value)"></td>
+                <td class="col-sm-1">
+                    <div class="btn-group" dropdown is-open="status.isopen">
+                        <button type="button" class="btn btn-default btn-sm dropdown-toggle">
+                            <span class="glyphicon glyphicon-envelope"></span>
                         </button>
-                        <div class="btn-group" dropdown is-open="status.isopen">
-                            <button type="button" class="btn btn-default btn-sm dropdown-toggle">
-                                <span class="glyphicon glyphicon-envelope"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li ng-repeat="class in classes"><a href="#" ng-click="openWindows(schema.id, class.name, $event)">{{class.name}}</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <button ng-if="!schema.editing" type="button" class="btn btn-default btn-sm btn-danger"
-                                ng-click="delete(schema)">
-                            <span class="glyphicon glyphicon-trash"></span>
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                        <ul class="dropdown-menu" role="menu">
+                            <li ng-repeat="class in classes"><a href="#"
+                                    ng-click="openWindows(schema.id, class.name, $event)">{{class.name}}</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button ng-if="!schema.editing" type="button" class="btn btn-default btn-sm"
+                            ng-click="show(schema)">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <button ng-if="!schema.editing" type="button" class="btn btn-default btn-sm btn-danger"
+                            ng-click="delete(schema)">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
 
-            <div class="form-group">
-                <button type="button" class="btn btn-default btn-sm" ng-click="addSchema = true">
-                    <span class="glyphicon glyphicon-plus"></span> Lägg till ny
-                </button>
-            </div>
-            <div ng-show="addSchema" class="panel panel-default">
-                <div class="panel-heading">Lägg till ny</div>
-                <div class="panel-body">
-                    <div class="form-group col-sm-4">
-                        <label for="name">Namn: </label>
-                        <input id="name" type="text" ng-model="name" class="form-control">
-                    </div>
-                    <div class="form-group col-sm-4" style="margin-top: 25px;">
-                        <button type="button" class="btn btn-default btn-sm btn-primary" ng-click="save()">
-                            <span class="glyphicon glyphicon-ok"></span> Spara
-                        </button>
-                        <button type="button" class="btn btn-default btn-sm" ng-click="addSchema = false">
-                            <span class="glyphicon glyphicon-remove"></span> Avbryt
-                        </button>
-                    </div>
+        <div class="form-group">
+            <button type="button" class="btn btn-default btn-sm" ng-click="addSchema = true">
+                <span class="glyphicon glyphicon-plus"></span> Lägg till ny
+            </button>
+        </div>
+        <div ng-show="addSchema" class="panel panel-default">
+            <div class="panel-heading">Lägg till ny</div>
+            <div class="panel-body">
+                <div class="form-group col-sm-4">
+                    <label for="name">Namn: </label>
+                    <input id="name" type="text" ng-model="name" class="form-control">
+                </div>
+                <div class="form-group col-sm-4" style="margin-top: 25px;">
+                    <button type="button" class="btn btn-default btn-sm btn-primary" ng-click="save()">
+                        <span class="glyphicon glyphicon-ok"></span> Spara
+                    </button>
+                    <button type="button" class="btn btn-default btn-sm" ng-click="addSchema = false">
+                        <span class="glyphicon glyphicon-remove"></span> Avbryt
+                    </button>
                 </div>
             </div>
         </div>
